# gs-quant

./: .deepsource.toml  .gitattributes  .gitignore  .gitlab-ci.yml  .gs-project.yml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cachiman README.md  MANIFEST.in  Maximilian Boeck.dco  NOTICE  NOTICE.txt  NUEVO DOC.txt  README.md  SKILL.md  ThreadManager.py  add-fredapi.bundle  conftest.py  pyproject.toml  requirements.txt  ruff.toml  run_all_tests.py  setup.cfg  setup.py  test_thread.py  test_thread2.py  versioneer.py
.claude/skills/: README.md  SKILL.md  backtesting.md  datasets.md  instruments.md  pricing.md  results.md
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeflash.yaml  python-publish.yml
dco/: Alta Fox Capital-Miles Child.dco  ArpitMishra.dco  Bryan Galindo.dco  Chris Droukas.dco  Fan Wu.dco  Grant McGovern.dco  Jake Anderson.dco  Jakiur Rahman.dco  Jean-Mickael Nounahon.dco  MarkoKangrga.dco  Maverick Lin.dco  Muhammad-Tauha.dco  Pengfei Meng.dco  Prajjwal Nijhara.dco  Scott Weinstein.dco  SimCorp-Roy Goodman.dco  Vedant Agarwal.dco  YashvardhanSingh.dco
docs/: Makefile  README.md  analytics.rst  conf.py  data.rst  datetime.rst  entities.rst  index.rst  instrument.rst  market.rst  markets.rst  models.rst  modules  risk.rst  timeseries.rst
docs/_templates/: contexts.rst  instruments.rst  models_class.rst  portfolio_manager.rst  processors.rst  report.rst  timeseries_class.rst
docs/classes/: gs_quant.analytics.datagrid.datagrid.DataGrid.rst  gs_quant.analytics.processors.AdditionProcessor.rst  gs_quant.analytics.processors.AppendProcessor.rst  gs_quant.analytics.processors.ChangeProcessor.rst  gs_quant.analytics.processors.CoordinateProcessor.rst  gs_quant.analytics.processors.CorrelationProcessor.rst  gs_quant.analytics.processors.DivisionProcessor.rst  gs_quant.analytics.processors.EntityProcessor.rst  gs_quant.analytics.processors.LastProcessor.rst  gs_quant.analytics.processors.MultiplicationProcessor.rst  gs_quant.analytics.processors.PercentilesProcessor.rst  gs_quant.analytics.processors.ReturnsProcessor.rst  gs_quant.analytics.processors.SharpeRatioProcessor.rst  gs_quant.analytics.processors.SubtractionProcessor.rst  gs_quant.analytics.processors.VolatilityProcessor.rst  gs_quant.analytics.workspaces.Component.rst  gs_quant.analytics.workspaces.Workspace.rst  gs_quant.api.gs.content.GsContentApi.rst  gs_quant.base.Priceable.rst  gs_quant.data.DataContext.rst  gs_quant.data.Dataset.rst  gs_quant.data.Fields.rst  gs_quant.data.core.DataContext.rst  gs_quant.data.dataset.Dataset.rst  gs_quant.data.fields.Fields.rst  gs_quant.datetime.relative_date.RelativeDate.rst  gs_quant.instrument.CommodOTCSwap.rst  gs_quant.instrument.CommodSwap.rst  gs_quant.instrument.EqCliquet.rst  gs_quant.instrument.EqForward.rst  gs_quant.instrument.EqOption.rst  gs_quant.instrument.EqSynthetic.rst  gs_quant.instrument.EqVarianceSwap.rst  gs_quant.instrument.FXAccumulator.rst  gs_quant.instrument.FXAccumulatorScheduleLeg.rst  gs_quant.instrument.FXBinary.rst  gs_quant.instrument.FXCorrelationSwap.rst  gs_quant.instrument.FXCorrelationSwapLeg.rst  gs_quant.instrument.FXDoubleKnockout.rst  gs_quant.instrument.FXDoubleOneTouch.rst  (+93 more)
docs/contribute/: index.md
docs/functions/: gs_quant.datetime.date.business_day_count.rst  gs_quant.datetime.date.prev_business_date.rst  gs_quant.datetime.point.point_sort_order.rst  gs_quant.markets.baskets.Basket.add_factor_risk_report.rst  gs_quant.markets.baskets.Basket.cancel_rebalance.rst  gs_quant.markets.baskets.Basket.clone.rst  gs_quant.markets.baskets.Basket.create.rst  gs_quant.markets.baskets.Basket.delete_factor_risk_report.rst  gs_quant.markets.baskets.Basket.entity_type.rst  gs_quant.markets.baskets.Basket.get.rst  gs_quant.markets.baskets.Basket.get_close_price_for_date.rst  gs_quant.markets.baskets.Basket.get_close_prices.rst  gs_quant.markets.baskets.Basket.get_corporate_actions.rst  gs_quant.markets.baskets.Basket.get_data_coordinate.rst  gs_quant.markets.baskets.Basket.get_data_series.rst  gs_quant.markets.baskets.Basket.get_details.rst  gs_quant.markets.baskets.Basket.get_entity.rst  gs_quant.markets.baskets.Basket.get_fundamentals.rst  gs_quant.markets.baskets.Basket.get_identifier.rst  gs_quant.markets.baskets.Basket.get_identifiers.rst  gs_quant.markets.baskets.Basket.get_latest_close_price.rst  gs_quant.markets.baskets.Basket.get_latest_position_set.rst  gs_quant.markets.baskets.Basket.get_latest_rebalance_data.rst  gs_quant.markets.baskets.Basket.get_latest_rebalance_date.rst  gs_quant.markets.baskets.Basket.get_live_date.rst  gs_quant.markets.baskets.Basket.get_marquee_id.rst  gs_quant.markets.baskets.Basket.get_position_set_for_date.rst  gs_quant.markets.baskets.Basket.get_position_sets.rst  gs_quant.markets.baskets.Basket.get_positions_data.rst  (+134 more)
gs_quant/: __init__.py  __main__.py  _version.py  base.py  common.py  config.ini  context_base.py  data.py  errors.py  instrument.py  json_convertors.py  json_convertors_common.py  json_encoder.py  mqapi.py  priceable.py  risk.py  session.py  utils.py
test_logs/: errors.md  failures.md  passed.md  skipped.md  summary.md  warnings.md
(+1416 files in other folders)
